force-app/main/default/objects/copado__User_Story__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <length>150</length>
    <type>Text</type>
</CustomField>