force-app/main/default/objects/copado__User_Story__c/fields/Pre_Deployment_Steps_Exist__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deployment_Steps_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Deployment Steps Exist</label>
    <type>Checkbox</type>
</CustomField>