force-app/main/default/objects/copado__User_Story__c/recordTypes/copado__Utility.recordType-meta.xml
<RecordType>
    <fullName>copado__Utility</fullName>
    <active>true</active>
    <label>Utility</label>
</RecordType>