force-app/main/default/objects/copado__User_Story__c/validationRules/copado__CredentialsMustBelongToTheEnvironment.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__CredentialsMustBelongToTheEnvironment</fullName>
    <active>false</active>
    <errorConditionFormula>NOT ( ISBLANK(copado__Environment__c) ) &amp;&amp;
NOT ( ISBLANK(copado__Org_Credential__c) ) &amp;&amp;
copado__Environment__c != copado__Org_Credential__r.copado__Environment__c</errorConditionFormula>
    <errorMessage>The credential must belong to the environment.</errorMessage>
</ValidationRule>