force-app/main/default/objects/copado__User_Story__c/validationRules/JIRA_key_and_External_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>JIRA_key_and_External_ID</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(ISBLANK( copadoccmint__JIRA_key__c ), ISBLANK( copadoccmint__External_Id__c )) ,
NOT(AND(ISBLANK(copadoccmint__JIRA_key__c), ISBLANK(copadoccmint__External_Id__c))))</errorConditionFormula>
    <errorMessage>You. need to fill both key and external ID for userstory while creating them manually</errorMessage>
</ValidationRule>