force-app/main/default/objects/copado__User_Story__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copadoccmint__JIRA_key__c</columns>
    <columns>copado__Epic__c</columns>
    <columns>copado__Project__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>copadoccmint__Enable_Logs__c</columns>
    <columns>copado__Latest_Commit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>